# hls_demos

./: README.md
convolution/: README.md
convolution/src/: filter2d_sw.cpp
load_an_alveo_image/: CMakeLists.txt  README.md
simple_memory_alloc/: CMakeLists.txt  README.md
simple_memory_alloc/hw_src/: Makefile  connectivity_u280.ini  profile.ini
simple_memory_alloc/sw_src/: 02_aligned_malloc.cpp
simple_spmv/: README.md
simple_spmv/hls_build/: build.tcl  build_partial_unrolling.tcl
simple_spmv/src/: spmv.cpp  spmv_partial_unrolling.cpp
vadd/: README.md
vadd/src/: u280.cfg
